# testing_walkthrough

./: CMakeLists.txt  main.cpp  purpose.md  readme.md  sqrt.cpp  sqrt.h
test/: test1.cpp  test_sqrt.cpp
